# kathairo.py

./: .gitignore  README.md  output.txt  output_russian.txt  pyproject.toml
TSVs/: douay_rheims.tsv  target_RSB_new.tsv
TSVs/arb/: target_AVD_vrs_issues.tsv  target_ONAV_vrs_issues.tsv
TSVs/eng/: target_BSB_vrs_issues.tsv
TSVs/fra/: target_LSG_vrs_issues.tsv
TSVs/hin/: target_IRV_vrs_issues.tsv  target_OHCV_vrs_issues.tsv
VerseText/: consectutive_punt_error_list.txt  target_OCCB-simplified_new.tsv
helpers/: paths.py  strings.py  verse_text.py  versification.py
kathairo/: alignment.py  alignmentSet.py  build_tsv.py  build_tsv_args_parser.py  build_tsv_wrapper.py  createVerseText.py  demonstration.py  main.py  prompts.json  usfmValidator.py  validator.py  verseTextWrapper.py  wrapper.py
proposals/: PROPOSAL.md  bsb-mrk-sample-excluded.tsv  bsb-mrk-sample-excluded.txt  bsb-mrk-sample.tsv  bsb-mrk-sample.txt  macula-hebrew-sample.tsv  reconstitute.py  source_SBLGNT_reconstitution_sample.tsv  source_SBLGNT_reconstitution_sample.txt  source_WLCM_reconstitution_sample.tsv  source_WLCM_reconstitution_sample.txt  source_WLCM_reconstitution_sample_wo_definite_articles.tsv  source_WLCM_reconstitution_sample_wo_definite_articles.txt  target_BSB_reconstitution_sample.tsv  target_BSB_reconstitution_sample.txt
resources/: sample.SFM
test/: __init__.py  bsb_book_list.txt  test_exclude_required.py  test_tsv.py  test_tsv_diagnostic.py  test_tsv_optional.py  test_tsv_punctuation.py  test_tsv_source_verse.py  test_tsv_target_verse.py  test_versification.py
(+2314 files in other folders)
