[tool.poetry]
name = "kathairo"
version = "0.1.0"
description = ""
authors = ["Robertson Brinker <robertsonbrinker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
sil-machine = "^1.0.2"
sil-thot = "^3.4.3"
biblelib = "^0.3.1"
usfm-grammar = "^3.0.0b4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
